apps/actual-budget/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: budget
  namespace: budget
spec:
  selector:
    app: budget
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - name: budget
      protocol: TCP
      port: 5006
      targetPort: 5006
